--- a/default/templates/default/poll_detail.html
+++ b/default/templates/default/poll_detail.html
@@ -2,8 +2,12 @@
 
 {% block content %}
 <h1>{{ poll.subject }}</h1>
+
+
 <p>建立日期：{{ poll.date_created }}</p>
 <p>{{ poll.desc }}</p>
+|<a href="/poll/{{ poll.id }}/edit/">編輯</a>
+|<a href="/poll/{{ poll.id }}/delete/">刪除</a>
 
 <ul>
     {% for o in option_list %}
