--- a/default/templates/poll_list.html
+++ b/default/templates/poll_list.html
@@ -7,7 +7,7 @@
     <title>投票主題列表</title>
 </head>
 <body>
-    <h1>投票主題</h1>
+    <h1>投票主題列表</h1>
     <ul>
         {% for p in polls %}
         <li>{{ p.date_created }} {{ p.subject }}</li>
